--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,196 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f6f8;
-    text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f4f6f8;
 }
 
-h1, h2{
-    text-align: center;
+h1{
+  text-align: center;
+  margin: 20px;
 }
 
-form{
-    width: 400px;
-    margin: auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
+form {
+  width: 400px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 30px auto;
+  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
 }
 
-input, select, button {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
+input,
+select,
+button {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 30px;
 }
 
 button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 table {
-    width: 80%;
-    margin: auto;
-    border-collapse: collapse;
+  width: 80%;
+  margin: auto;
+  border-collapse: collapse;
+  border-style: inset;
+  margin: 30px auto;
 }
 
-table th, table td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: center;
+table th,
+table td {
+  border: 2px solid #dde69c;
+  padding: 8px;
+  text-align: center;
+  background-color: #eaf0c1;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-.btn {
-    margin-right: 20px;
-    padding: 10px;
-    border: 2px solid #ff0051;
-    border-radius: 30px;
-    color: #ff0051;
+
+.back, .other_btn {
+  margin: 20px 20px;
+  padding: 10px;
+  border: 2px solid #ff0051;
+  border-radius: 30px;
+  color: #ff0051;
 }
 
 /* my */
 
-li{
-    list-style-type: none;
-    gap: 20px;
+li {
+  list-style-type: none;
+  gap: 20px;
 }
 
 /* logout */
-.logout{
-    background-color: #ff0051;
-    padding: 10px;
-    border-radius: 16px;
-    color: white;
-    font-weight: 700;
-
+.logout {
+  background-color: #ff0051;
+  margin: 5px;
+  padding: 5px 15px;
+  border-radius: 16px;
+  color: white;
+  font-weight: 700;
+  position: fixed;
+  top: 0;
+  right: 20px;
 }
+
+/* Card */
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 30px;
+}
+
+.card {
+  background: white;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
+}
+
+.card h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.card p {
+  font-size: 24px;
+  font-weight: bold;
+  color: #007bff;
+}
+
+/* edit & delete button */
+.edit,
+.delete {
+  display: inline-block; /* 🔴 THIS IS THE KEY */
+  padding: 6px 12px;
+  color: white;
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.edit {
+  background-color: #008cba;
+}
+.delete {
+  background-color: #f44336;
+}
+
+/* container */
+.main-container{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 200px 1fr;
+    gap: 40px;
+    margin: auto;
+}
+
+nav{
+    height: 40px;
+    width: 100vw;
+    margin-bottom: 5px;
+    background-color: #085246;
+}
+
+nav span{
+    color: white;
+    font-size: larger;
+    font-weight: 700;
+}
+/* sidebar */
+.menu{
+    width: 200px;
+    height: 100vh;
+    background-color: #085246;
+    left: 0;
+    top: 20px;
+    padding-top: 20px;
+}
+
+.menu h2{
+    color: white;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.menu a{
+    text-align: left;
+    display: block;
+    color: white;
+    padding: 10px 20px;
+}
+
+.menu a:hover{
+    background-color: #34495e;
+}
+
+.search_box{
+    /* text-align:center;  */
+    margin:30px 20px;
+    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
+}
+
+.page{
+    width:  100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
